src/app/page.module.css
@font-face {
  font-family: Fat;
  src: url("/fonts/fat/FFF-Regular.otf") format("opentype");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: Fat;
  src: url("/fonts/fat/FFF-Slanted.otf") format("opentype");
  font-weight: 400;
  font-style: italic;
}

@font-face {
  font-family: Dudu;
  src: url("/fonts/dudu/Dudu.ttf") format("truetype");
}

.introCard {
  position: relative;
  min-width: 100dvw;
  height: 100dvh;
}

.bigText {
  font-size: clamp(2rem, 40vw, 70rem);
  line-height: 80%;
  font-family: "Fat", sans-serif;
  font-style: italic;
}

.introGroup {
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 100vw;
  padding:1vw 2.5vw;
}


.projectTitle {
  font-family: "Fat", sans-serif;
  font-style: normal;
  font-size: clamp(3rem, 9vw, 13rem);
  line-height: 1;
  text-transform: uppercase;
}

.introText {
  font-family: "Dudu";
  display: flex;
  align-items: center;
  margin: 0;

  &:first-child {
    margin-bottom: -1.2em;
  }

  font-size: clamp(1rem, 5vw, 30rem);
  svg {
    width: 4dvw;
    line-height: 0;
    margin-left:2vw;
  }
}

